--- a/about.html
+++ b/about.html
@@ -17,13 +17,13 @@
           <nav>
             <ul>
               <li>
-                <a href="/">Home</a>
+                <a href="/Lab3/index.html">Home</a>
               </li>
               <li>
-                <a href="/about.html">About</a>
+                <a href="/Lab3/about.html">About</a>
               </li>
               <li>
-                <a href="/contact.html">Contact Us</a>
+                <a href="/Lab3/contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
