--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       </header>
       <div class="mainContent">
         <aside>
-          <nav>
+          <nav class="navBar">
             <ul>
               <li>
-                <a href="/">Home</a>
+                <a href="/Lab3/index.html">Home</a>
               </li>
               <li>
-                <a href="/about.html">About</a>
+                <a href="/Lab3/about.html">About</a>
               </li>
               <li>
-                <a href="/contact.html">Contact Us</a>
+                <a href="/Lab3/contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
