--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           <nav class="navBar">
             <ul>
               <li>
-                <a href="/Lab3/index.html">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
-                <a href="/Lab3/about.html">About</a>
+                <a href="about.html">About</a>
               </li>
               <li>
-                <a href="/Lab3/contact.html">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
