Add first letter effect

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         </aside>
         <main>
           <h2 id="aboutHeader">About</h2>
-          <p id="aboutText">
+          <p id="aboutText" class="firstPara">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate
             dolore, labore sed a architecto dolor reprehenderit nemo iure
             accusantium quisquam magnam quasi, eligendi illum? Libero minima
