--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </aside>
         <main id="homeMain">
           <img src="lorem.jpg" alt="lorem ipsum" class="img" />
-          <p class="homeMainText">
+          <p class="homeMainText firstPara">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quod
             voluptatum, excepturi, officiis ipsa aspernatur magnam, earum quos
             iure dicta ipsam minus. Amet exercitationem possimus, magnam
